--- a/coatcheck/index.html
+++ b/coatcheck/index.html
@@ -44,7 +44,7 @@
 <h1 class='fqn'><span class='in-band'>Crate <a class='mod' href=''>coatcheck</a><wbr></span><span class='out-of-band'><a href='stability.html'>[stability]</a> <span id='render-detail'>
             <a id="collapse-all" href="#">[-]
             </a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-0' href='../src/coatcheck/lib.rs.html#1-792'>[src]</a></span></h1>
+        </span><a id='src-0' href='../src/coatcheck/lib.rs.html#1-826'>[src]</a></span></h1>
 <div class='docblock'>
 <h1 id="coatcheck" class='section-header'><a
                            href="#coatcheck">CoatCheck</a></h1>
@@ -61,7 +61,39 @@ actually need to be able to choose the keys.</p>
 </ol>
 
 <h2 id="example" class='section-header'><a
-                           href="#example">Example</a></h2>
+                           href="#example">Example</a></h2><pre id='rust-example-rendered' class='rust '>
+<span class='kw'>use</span> <span class='ident'>coatcheck</span>::{<span class='ident'>CoatCheck</span>, <span class='ident'>Ticket</span>};
+<span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>error</span>::<span class='ident'>FromError</span>;
+
+<span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>cc</span> <span class='op'>=</span> <span class='ident'>CoatCheck</span>::<span class='ident'>new</span>();
+
+<span class='comment'>// Check two values.</span>
+<span class='kw'>let</span> <span class='ident'>ticket1</span> <span class='op'>=</span> <span class='ident'>cc</span>.<span class='ident'>check</span>(<span class='string'>&quot;my value&quot;</span>);
+<span class='kw'>let</span> <span class='ident'>ticket2</span> <span class='op'>=</span> <span class='ident'>cc</span>.<span class='ident'>check</span>(<span class='string'>&quot;my other value&quot;</span>);
+
+<span class='comment'>// Look at the first one.</span>
+<span class='macro'>println</span><span class='macro'>!</span>(<span class='string'>&quot;{}&quot;</span>, <span class='ident'>cc</span>[<span class='ident'>ticket1</span>]);
+
+<span class='comment'>// Claim the second one.</span>
+<span class='macro'>println</span><span class='macro'>!</span>(<span class='string'>&quot;{}&quot;</span>, <span class='ident'>cc</span>.<span class='ident'>claim</span>(<span class='ident'>ticket2</span>).<span class='ident'>unwrap</span>());
+
+<span class='comment'>// Claiming again will fail at compile time.</span>
+<span class='comment'>// println!(&quot;{}&quot;, cc.claim(ticket2).unwrap());</span>
+
+<span class='comment'>// Drain the items into a vector.</span>
+<span class='kw'>let</span> <span class='ident'>items</span>: <span class='ident'>Vec</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='ident'>str</span><span class='op'>&gt;</span> <span class='op'>=</span> <span class='ident'>cc</span>.<span class='ident'>into_iter</span>().<span class='ident'>collect</span>();
+<span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>items</span>[<span class='number'>0</span>], <span class='string'>&quot;my value&quot;</span>);
+
+<span class='comment'>// Create a second coat check:</span>
+<span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>cc2</span>: <span class='ident'>CoatCheck</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='ident'>str</span><span class='op'>&gt;</span> <span class='op'>=</span> <span class='ident'>CoatCheck</span>::<span class='ident'>new</span>();
+
+<span class='comment'>// `ticket1` was never claimed so let&#39;s try claiming it in this coat check...</span>
+<span class='kw'>let</span> <span class='ident'>ticket</span>: <span class='ident'>Ticket</span> <span class='op'>=</span> <span class='ident'>FromError</span>::<span class='ident'>from_error</span>(<span class='ident'>cc2</span>.<span class='ident'>claim</span>(<span class='ident'>ticket1</span>).<span class='ident'>unwrap_err</span>());
+<span class='comment'>// It fails and returns the ticket.</span>
+</pre>
+
+<h2 id="use-case" class='section-header'><a
+                           href="#use-case">Use Case</a></h2>
 <p>For example, let&#39;s say you were implementing a callback system:</p>
 <pre id='rust-example-rendered' class='rust '>
 <span class='kw'>struct</span> <span class='ident'>System</span> {
