--- a/coatcheck/struct.CoatCheck.html
+++ b/coatcheck/struct.CoatCheck.html
@@ -44,7 +44,7 @@
 <h1 class='fqn'><span class='in-band'>Struct <a href='index.html'>coatcheck</a>::<wbr><a class='struct' href=''>CoatCheck</a><wbr></span><span class='out-of-band'><span id='render-detail'>
             <a id="collapse-all" href="#">[-]
             </a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-927' href='../src/coatcheck/lib.rs.html#357-362'>[src]</a></span></h1>
+        </span><a id='src-927' href='../src/coatcheck/lib.rs.html#390-395'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct CoatCheck&lt;V&gt; {
     // some fields omitted
 }</pre><div class='docblock'><p>A data structure storing values indexed by tickets.</p>
@@ -177,17 +177,18 @@ start to end). The coat check cannot be used after calling this.</p>
 <div class='docblock'><p>Claim an item.</p>
 
 <p>Returns <code>Ok(value)</code> if the ticket belongs to this <code>CoatCheck&lt;V&gt;</code> (eating the ticket).
-Returns <code>Err(ticket)</code> if the ticket belongs to another <code>CoatCheck&lt;V&gt;</code> (returning the ticket).</p>
+Returns <code>Err(ClaimError)</code> if the ticket belongs to another <code>CoatCheck&lt;V&gt;</code> (returning the
+ticket inside of the ClaimError).</p>
 </div><h4 id='method.get' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.get' class='fnname'>get</a>(&amp;self, ticket: &amp;<a class='struct' href='../coatcheck/struct.Ticket.html' title='coatcheck::Ticket'>Ticket</a>) -&gt; <a class='enum' href='http://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;&amp;V, <a class='struct' href='../coatcheck/struct.AccessError.html' title='coatcheck::AccessError'>AccessError</a>&gt;</code></h4>
 <div class='docblock'><p>Get a reference to the value matching this ticket.</p>
 
 <p>Returns <code>Ok(&amp;value)</code> if the ticket belongs to this <code>CoatCheck&lt;V&gt;</code>.
-Returns <code>Err(())</code> if the ticket belongs to another <code>CoatCheck&lt;V&gt;</code>.</p>
+Returns <code>Err(AccessError)</code> if the ticket belongs to another <code>CoatCheck&lt;V&gt;</code>.</p>
 </div><h4 id='method.get_mut' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.get_mut' class='fnname'>get_mut</a>(&amp;mut self, ticket: &amp;<a class='struct' href='../coatcheck/struct.Ticket.html' title='coatcheck::Ticket'>Ticket</a>) -&gt; <a class='enum' href='http://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;&amp;mut V, <a class='struct' href='../coatcheck/struct.AccessError.html' title='coatcheck::AccessError'>AccessError</a>&gt;</code></h4>
 <div class='docblock'><p>Get a mutable reference to the value matching this ticket.</p>
 
 <p>Returns <code>Ok(&amp;mut value)</code> if the ticket belongs to this <code>CoatCheck&lt;V&gt;</code>.
-Returns <code>Err(())</code> if the ticket belongs to another <code>CoatCheck&lt;V&gt;</code>.</p>
+Returns <code>Err(AccessError)</code> if the ticket belongs to another <code>CoatCheck&lt;V&gt;</code>.</p>
 </div></div><h2 id='implementations'>Trait Implementations</h2><h3 class='impl'><a class='stability Unstable' title='Unstable: I/O and core have yet to be reconciled'></a><code>impl&lt;V&gt; <a class='trait' href='http://doc.rust-lang.org/nightly/core/fmt/trait.Debug.html' title='core::fmt::Debug'>Debug</a> for <a class='struct' href='../coatcheck/struct.CoatCheck.html' title='coatcheck::CoatCheck'>CoatCheck</a>&lt;V&gt; <span class='where'>where V: <a class='trait' href='http://doc.rust-lang.org/nightly/core/fmt/trait.Debug.html' title='core::fmt::Debug'>Debug</a></span></code></h3><div class='impl-items'><h4 id='method.fmt' class='method'><a class='stability Unstable' title='Unstable: I/O and core have yet to be reconciled'></a><code>fn <a href='#method.fmt' class='fnname'>fmt</a>(&amp;self, f: &amp;mut <a class='struct' href='http://doc.rust-lang.org/nightly/core/fmt/struct.Formatter.html' title='core::fmt::Formatter'>Formatter</a>) -&gt; <a class='type' href='http://doc.rust-lang.org/nightly/core/fmt/type.Result.html' title='core::fmt::Result'>Result</a></code></h4>
 </div><h3 class='impl'><a class='stability Stable' title='Stable'></a><code>impl&lt;V&gt; <a class='trait' href='http://doc.rust-lang.org/nightly/core/ops/trait.Index.html' title='core::ops::Index'>Index</a>&lt;<a class='struct' href='../coatcheck/struct.Ticket.html' title='coatcheck::Ticket'>Ticket</a>&gt; for <a class='struct' href='../coatcheck/struct.CoatCheck.html' title='coatcheck::CoatCheck'>CoatCheck</a>&lt;V&gt;</code></h3><div class='impl-items'><h4 id='assoc_type.Output' class='type'><a class='stability Unmarked' title='No stability level'></a><code>type Output = V</code></h4>
 <h4 id='method.index' class='method'><a class='stability Stable' title='Stable'></a><code>fn <a href='#method.index' class='fnname'>index</a>(&amp;self, ticket: &amp;<a class='struct' href='../coatcheck/struct.Ticket.html' title='coatcheck::Ticket'>Ticket</a>) -&gt; &amp;V</code></h4>
