--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -832,6 +832,40 @@
 <span id="790">790</span>
 <span id="791">791</span>
 <span id="792">792</span>
+<span id="793">793</span>
+<span id="794">794</span>
+<span id="795">795</span>
+<span id="796">796</span>
+<span id="797">797</span>
+<span id="798">798</span>
+<span id="799">799</span>
+<span id="800">800</span>
+<span id="801">801</span>
+<span id="802">802</span>
+<span id="803">803</span>
+<span id="804">804</span>
+<span id="805">805</span>
+<span id="806">806</span>
+<span id="807">807</span>
+<span id="808">808</span>
+<span id="809">809</span>
+<span id="810">810</span>
+<span id="811">811</span>
+<span id="812">812</span>
+<span id="813">813</span>
+<span id="814">814</span>
+<span id="815">815</span>
+<span id="816">816</span>
+<span id="817">817</span>
+<span id="818">818</span>
+<span id="819">819</span>
+<span id="820">820</span>
+<span id="821">821</span>
+<span id="822">822</span>
+<span id="823">823</span>
+<span id="824">824</span>
+<span id="825">825</span>
+<span id="826">826</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -846,6 +880,39 @@
 <span class='doccomment'>//! 3. CoatCheck is about 40x faster for lookup operations.</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! ## Example</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! ```</span>
+<span class='doccomment'>//! use coatcheck::{CoatCheck, Ticket};</span>
+<span class='doccomment'>//! use std::error::FromError;</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! let mut cc = CoatCheck::new();</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Check two values.</span>
+<span class='doccomment'>//! let ticket1 = cc.check(&quot;my value&quot;);</span>
+<span class='doccomment'>//! let ticket2 = cc.check(&quot;my other value&quot;);</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Look at the first one.</span>
+<span class='doccomment'>//! println!(&quot;{}&quot;, cc[ticket1]);</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Claim the second one.</span>
+<span class='doccomment'>//! println!(&quot;{}&quot;, cc.claim(ticket2).unwrap());</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Claiming again will fail at compile time.</span>
+<span class='doccomment'>//! // println!(&quot;{}&quot;, cc.claim(ticket2).unwrap());</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Drain the items into a vector.</span>
+<span class='doccomment'>//! let items: Vec&lt;&amp;str&gt; = cc.into_iter().collect();</span>
+<span class='doccomment'>//! assert_eq!(items[0], &quot;my value&quot;);</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // Create a second coat check:</span>
+<span class='doccomment'>//! let mut cc2: CoatCheck&lt;&amp;str&gt; = CoatCheck::new();</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! // `ticket1` was never claimed so let&#39;s try claiming it in this coat check...</span>
+<span class='doccomment'>//! let ticket: Ticket = FromError::from_error(cc2.claim(ticket1).unwrap_err());</span>
+<span class='doccomment'>//! // It fails and returns the ticket.</span>
+<span class='doccomment'>//! ```</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! ## Use Case</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! For example, let&#39;s say you were implementing a callback system:</span>
 <span class='doccomment'>//!</span>
@@ -1415,7 +1482,8 @@
     <span class='doccomment'>/// Claim an item.</span>
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// Returns `Ok(value)` if the ticket belongs to this `CoatCheck&lt;V&gt;` (eating the ticket).</span>
-    <span class='doccomment'>/// Returns `Err(ticket)` if the ticket belongs to another `CoatCheck&lt;V&gt;` (returning the ticket).</span>
+    <span class='doccomment'>/// Returns `Err(ClaimError)` if the ticket belongs to another `CoatCheck&lt;V&gt;` (returning the</span>
+    <span class='doccomment'>/// ticket inside of the ClaimError).</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>claim</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='ident'>V</span>, <span class='ident'>ClaimError</span><span class='op'>&gt;</span> {
         <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
             <span class='prelude-val'>Err</span>(<span class='ident'>ClaimError</span> { <span class='ident'>ticket</span>: <span class='ident'>ticket</span>, <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
@@ -1430,7 +1498,7 @@
     <span class='doccomment'>/// Get a reference to the value matching this ticket.</span>
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// Returns `Ok(&amp;value)` if the ticket belongs to this `CoatCheck&lt;V&gt;`.</span>
-    <span class='doccomment'>/// Returns `Err(())` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
+    <span class='doccomment'>/// Returns `Err(AccessError)` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='ident'>V</span>, <span class='ident'>AccessError</span><span class='op'>&gt;</span> {
         <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
             <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
@@ -1445,7 +1513,7 @@
     <span class='doccomment'>/// Get a mutable reference to the value matching this ticket.</span>
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// Returns `Ok(&amp;mut value)` if the ticket belongs to this `CoatCheck&lt;V&gt;`.</span>
-    <span class='doccomment'>/// Returns `Err(())` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
+    <span class='doccomment'>/// Returns `Err(AccessError)` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get_mut</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>V</span>, <span class='ident'>AccessError</span><span class='op'>&gt;</span> {
         <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
             <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
