Update docs for 65c72f136e2330116f1b79d63388a14ad33c8898
document Tickets.

--- a/coatcheck/index.html
+++ b/coatcheck/index.html
@@ -44,7 +44,7 @@
 <h1 class='fqn'><span class='in-band'>Crate <a class='mod' href=''>coatcheck</a><wbr></span><span class='out-of-band'><a href='stability.html'>[stability]</a> <span id='render-detail'>
             <a id="collapse-all" href="#">[-]
             </a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-0' href='../src/coatcheck/lib.rs.html#1-826'>[src]</a></span></h1>
+        </span><a id='src-0' href='../src/coatcheck/lib.rs.html#1-827'>[src]</a></span></h1>
 <div class='docblock'>
 <h1 id="coatcheck" class='section-header'><a
                            href="#coatcheck">CoatCheck</a></h1>
@@ -231,7 +231,8 @@ before freeing a slot.</p></li>
                     <tr>
                         <td><a class='stability Unmarked' title='No stability level'></a><a class='struct' href='struct.Tickets.html'
                                title='coatcheck::Tickets'>Tickets</a></td>
-                        <td class='docblock short'></td>
+                        <td class='docblock short'><p>Iterator that checks-in values in exchange for tickets.</p>
+</td>
                     </tr>
                 </table><h2 id='enums' class='section-header'><a href="#enums">Enums</a></h2>
 <table>
