--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -867,6 +867,7 @@
 <span id="825">825</span>
 <span id="826">826</span>
 <span id="827">827</span>
+<span id="828">828</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -1022,7 +1023,6 @@
 <span class='doccomment'>//!    (without using actual references, that is).</span>
 
 <span class='attribute'>#<span class='op'>!</span>[<span class='ident'>allow</span>(<span class='ident'>unstable</span>)]</span>
-<span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>rand</span>::<span class='ident'>random</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>fmt</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>vec</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>ops</span>::{<span class='ident'>Index</span>, <span class='ident'>IndexMut</span>};
@@ -1035,6 +1035,8 @@
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>error</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>error</span>::<span class='ident'>Error</span> <span class='kw'>as</span> <span class='ident'>ErrorTrait</span>;
 <span class='kw'>use</span> <span class='ident'>Entry</span>::<span class='op'>*</span>;
+
+<span class='kw'>mod</span> <span class='ident'>tagger</span>;
 
 <span class='kw'>enum</span> <span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
     <span class='ident'>Empty</span>(<span class='ident'>usize</span> <span class='comment'>/* next free index */</span>),
@@ -1103,7 +1105,7 @@
 <span class='attribute'>#[<span class='ident'>allow</span>(<span class='ident'>missing_copy_implementations</span>)]</span>
 <span class='attribute'>#[<span class='ident'>must_use</span> <span class='op'>=</span> <span class='string'>&quot;you need this ticket to claim your item&quot;</span>]</span>
 <span class='kw'>pub</span> <span class='kw'>struct</span> <span class='ident'>Ticket</span> {
-    <span class='ident'>tag</span>: <span class='ident'>usize</span>,
+    <span class='ident'>tag</span>: <span class='ident'>tagger</span>::<span class='ident'>Tag</span>,
     <span class='ident'>index</span>: <span class='ident'>usize</span>,
 }
 
@@ -1259,7 +1261,7 @@
 
 <span class='doccomment'>/// A data structure storing values indexed by tickets.</span>
 <span class='kw'>pub</span> <span class='kw'>struct</span> <span class='ident'>CoatCheck</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
-    <span class='ident'>tag</span>: <span class='ident'>usize</span>,
+    <span class='ident'>tag</span>: <span class='ident'>tagger</span>::<span class='ident'>Tag</span>,
     <span class='ident'>data</span>: <span class='ident'>Vec</span><span class='op'>&lt;</span><span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;&gt;</span>,
     <span class='ident'>size</span>: <span class='ident'>usize</span>,
     <span class='ident'>next_free</span>: <span class='ident'>usize</span>,
@@ -1312,7 +1314,7 @@
     <span class='attribute'>#[<span class='ident'>inline</span>]</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>with_capacity</span>(<span class='ident'>capacity</span>: <span class='ident'>usize</span>) <span class='op'>-&gt;</span> <span class='ident'>CoatCheck</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
         <span class='ident'>CoatCheck</span> {
-            <span class='ident'>tag</span>: <span class='ident'>random</span>(),
+            <span class='ident'>tag</span>: <span class='ident'>tagger</span>::<span class='ident'>next_tag</span>(),
             <span class='ident'>data</span>: <span class='ident'>Vec</span>::<span class='ident'>with_capacity</span>(<span class='ident'>capacity</span>),
             <span class='ident'>next_free</span>: <span class='number'>0</span>,
             <span class='ident'>size</span>: <span class='number'>0</span>,
