--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -854,6 +854,12 @@
 <span id="812">812</span>
 <span id="813">813</span>
 <span id="814">814</span>
+<span id="815">815</span>
+<span id="816">816</span>
+<span id="817">817</span>
+<span id="818">818</span>
+<span id="819">819</span>
+<span id="820">820</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -1391,7 +1397,8 @@
             <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>push</span>(<span class='ident'>Full</span>(<span class='ident'>value</span>));
             <span class='self'>self</span>.<span class='ident'>next_free</span> <span class='op'>=</span> <span class='self'>self</span>.<span class='ident'>next_free</span>.<span class='ident'>checked_add</span>(<span class='number'>1</span>).<span class='ident'>unwrap</span>();
         } <span class='kw'>else</span> {
-            <span class='self'>self</span>.<span class='ident'>next_free</span> <span class='op'>=</span> <span class='self'>self</span>.<span class='ident'>data</span>[<span class='ident'>loc</span>].<span class='ident'>fill</span>(<span class='ident'>value</span>);
+            <span class='comment'>// Safe because we&#39;ve recorded that it is safe.</span>
+            <span class='self'>self</span>.<span class='ident'>next_free</span> <span class='op'>=</span> <span class='kw'>unsafe</span> { <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked_mut</span>(<span class='ident'>loc</span>) }.<span class='ident'>fill</span>(<span class='ident'>value</span>);
         }
         <span class='self'>self</span>.<span class='ident'>size</span> <span class='op'>+=</span> <span class='number'>1</span>;
         <span class='ident'>Ticket</span> { <span class='ident'>tag</span>: <span class='self'>self</span>.<span class='ident'>tag</span>, <span class='ident'>index</span>: <span class='ident'>loc</span> }
@@ -1464,7 +1471,8 @@
         <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
             <span class='prelude-val'>Err</span>(<span class='ident'>ClaimError</span> { <span class='ident'>ticket</span>: <span class='ident'>ticket</span>, <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
         } <span class='kw'>else</span> {
-            <span class='kw'>let</span> <span class='ident'>value</span> <span class='op'>=</span> <span class='self'>self</span>.<span class='ident'>data</span>[<span class='ident'>ticket</span>.<span class='ident'>index</span>].<span class='ident'>empty</span>(<span class='self'>self</span>.<span class='ident'>next_free</span>);
+            <span class='comment'>// Safe because, if we&#39;ve handed out the ticket, this slot must exist.</span>
+            <span class='kw'>let</span> <span class='ident'>value</span> <span class='op'>=</span> <span class='kw'>unsafe</span> { <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked_mut</span>(<span class='ident'>ticket</span>.<span class='ident'>index</span>) }.<span class='ident'>empty</span>(<span class='self'>self</span>.<span class='ident'>next_free</span>);
             <span class='self'>self</span>.<span class='ident'>next_free</span> <span class='op'>=</span> <span class='ident'>ticket</span>.<span class='ident'>index</span>;
             <span class='self'>self</span>.<span class='ident'>size</span> <span class='op'>-=</span> <span class='number'>1</span>;
             <span class='prelude-val'>Ok</span>(<span class='ident'>value</span>)
@@ -1475,11 +1483,13 @@
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// Returns `Ok(&amp;value)` if the ticket belongs to this `CoatCheck&lt;V&gt;`.</span>
     <span class='doccomment'>/// Returns `Err(AccessError)` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
+    <span class='attribute'>#[<span class='ident'>inline</span>]</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='ident'>V</span>, <span class='ident'>AccessError</span><span class='op'>&gt;</span> {
         <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
             <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
         } <span class='kw'>else</span> {
-            <span class='kw'>match</span> <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>index</span>(<span class='kw-2'>&amp;</span><span class='ident'>ticket</span>.<span class='ident'>index</span>) {
+            <span class='comment'>// Safe because, if we&#39;ve handed out the ticket, this slot must exist.</span>
+            <span class='kw'>match</span> <span class='kw'>unsafe</span> { <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked</span>(<span class='ident'>ticket</span>.<span class='ident'>index</span>) } {
                 <span class='kw-2'>&amp;</span><span class='ident'>Full</span>(<span class='kw-2'>ref</span> <span class='ident'>v</span>) <span class='op'>=&gt;</span> <span class='prelude-val'>Ok</span>(<span class='ident'>v</span>),
                 _ <span class='op'>=&gt;</span> <span class='macro'>panic</span><span class='macro'>!</span>(<span class='string'>&quot;forged ticket&quot;</span>),
             }
@@ -1490,11 +1500,13 @@
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// Returns `Ok(&amp;mut value)` if the ticket belongs to this `CoatCheck&lt;V&gt;`.</span>
     <span class='doccomment'>/// Returns `Err(AccessError)` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
+    <span class='attribute'>#[<span class='ident'>inline</span>]</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get_mut</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>V</span>, <span class='ident'>AccessError</span><span class='op'>&gt;</span> {
         <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
             <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
         } <span class='kw'>else</span> {
-            <span class='kw'>match</span> <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>index_mut</span>(<span class='kw-2'>&amp;</span><span class='ident'>ticket</span>.<span class='ident'>index</span>) {
+            <span class='comment'>// Safe because, if we&#39;ve handed out the ticket, this slot must exist.</span>
+            <span class='kw'>match</span> <span class='kw'>unsafe</span> { <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>get_unchecked_mut</span>(<span class='ident'>ticket</span>.<span class='ident'>index</span>) } {
                 <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>Full</span>(<span class='kw-2'>ref</span> <span class='kw-2'>mut</span> <span class='ident'>v</span>) <span class='op'>=&gt;</span> <span class='prelude-val'>Ok</span>(<span class='ident'>v</span>),
                 _ <span class='op'>=&gt;</span> <span class='macro'>panic</span><span class='macro'>!</span>(<span class='string'>&quot;forged ticket&quot;</span>),
             }
