--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -869,6 +869,9 @@
 <span id="827">827</span>
 <span id="828">828</span>
 <span id="829">829</span>
+<span id="830">830</span>
+<span id="831">831</span>
+<span id="832">832</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -1131,8 +1134,10 @@
 
 <span class='doccomment'>/// The error yielded when a claim fails.</span>
 <span class='kw'>pub</span> <span class='kw'>struct</span> <span class='ident'>ClaimError</span> {
-    <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>,
-    <span class='ident'>ticket</span>: <span class='ident'>Ticket</span>,
+    <span class='doccomment'>/// The error kind.</span>
+    <span class='kw'>pub</span> <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>,
+    <span class='doccomment'>/// The ticket used in the failed claim.</span>
+    <span class='kw'>pub</span> <span class='ident'>ticket</span>: <span class='ident'>Ticket</span>,
 }
 
 <span class='kw'>impl</span> <span class='ident'>error</span>::<span class='ident'>Error</span> <span class='kw'>for</span> <span class='ident'>ClaimError</span> {
@@ -1156,7 +1161,8 @@
 <span class='doccomment'>/// The error yielded an access fails.</span>
 <span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>Copy</span>)]</span>
 <span class='kw'>pub</span> <span class='kw'>struct</span> <span class='ident'>AccessError</span> {
-    <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>,
+    <span class='doccomment'>/// The error kind.</span>
+    <span class='kw'>pub</span> <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>,
 }
 
 <span class='kw'>impl</span> <span class='ident'>error</span>::<span class='ident'>Error</span> <span class='kw'>for</span> <span class='ident'>AccessError</span> {
