Update docs for da1361d4b4cd7ae8dcbb60039d86d1f0219b2216
impl Debug for errors (fix unwrap())

--- a/coatcheck/struct.Ticket.html
+++ b/coatcheck/struct.Ticket.html
@@ -26,7 +26,7 @@
 
     <section class="sidebar">
         
-        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct ' href='struct.AccessError.html'>AccessError</a><a class='struct ' href='struct.ClaimError.html'>ClaimError</a><a class='struct ' href='struct.CoatCheck.html'>CoatCheck</a><a class='struct current' href='struct.Ticket.html'>Ticket</a><a class='struct ' href='struct.Tickets.html'>Tickets</a></div><div class='block enum'><h2>Enums</h2><a class='enum ' href='enum.ErrorKind.html'>ErrorKind</a></div>
+        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct ' href='struct.AccessError.html' title='The error yielded an access fails.'>AccessError</a><a class='struct ' href='struct.ClaimError.html' title='The error yielded when a claim fails.'>ClaimError</a><a class='struct ' href='struct.CoatCheck.html' title='A data structure storing values indexed by tickets.'>CoatCheck</a><a class='struct current' href='struct.Ticket.html' title='A `Ticket` is an opaque data structure that can be used to claim the associated value.'>Ticket</a><a class='struct ' href='struct.Tickets.html' title='Iterator that checks-in values in exchange for tickets.'>Tickets</a></div><div class='block enum'><h2>Enums</h2><a class='enum ' href='enum.ErrorKind.html' title='Coat check error types'>ErrorKind</a></div>
     </section>
 
     <nav class="sub">
