--- a/coatcheck/struct.Tickets.html
+++ b/coatcheck/struct.Tickets.html
@@ -26,7 +26,7 @@
 
     <section class="sidebar">
         
-        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct ' href='struct.AccessError.html'>AccessError</a><a class='struct ' href='struct.ClaimError.html'>ClaimError</a><a class='struct ' href='struct.CoatCheck.html'>CoatCheck</a><a class='struct ' href='struct.Ticket.html'>Ticket</a><a class='struct current' href='struct.Tickets.html'>Tickets</a></div><div class='block enum'><h2>Enums</h2><a class='enum ' href='enum.ErrorKind.html'>ErrorKind</a></div>
+        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct ' href='struct.AccessError.html' title='The error yielded an access fails.'>AccessError</a><a class='struct ' href='struct.ClaimError.html' title='The error yielded when a claim fails.'>ClaimError</a><a class='struct ' href='struct.CoatCheck.html' title='A data structure storing values indexed by tickets.'>CoatCheck</a><a class='struct ' href='struct.Ticket.html' title='A `Ticket` is an opaque data structure that can be used to claim the associated value.'>Ticket</a><a class='struct current' href='struct.Tickets.html' title='Iterator that checks-in values in exchange for tickets.'>Tickets</a></div><div class='block enum'><h2>Enums</h2><a class='enum ' href='enum.ErrorKind.html' title='Coat check error types'>ErrorKind</a></div>
     </section>
 
     <nav class="sub">
@@ -44,7 +44,7 @@
 <h1 class='fqn'><span class='in-band'>Struct <a href='index.html'>coatcheck</a>::<wbr><a class='struct' href=''>Tickets</a><wbr></span><span class='out-of-band'><span id='render-detail'>
             <a id="collapse-all" href="#">[-]
             </a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-1030' href='../src/coatcheck/lib.rs.html#308-311'>[src]</a></span></h1>
+        </span><a id='src-1074' href='../src/coatcheck/lib.rs.html#320-323'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct Tickets&lt;'a, I, V&gt; <span class='where'>where I: <a class='trait' href='http://doc.rust-lang.org/nightly/core/iter/trait.Iterator.html' title='core::iter::Iterator'>Iterator</a>&lt;Item=V&gt;, V: 'a</span> {
     // some fields omitted
 }</pre><div class='docblock'><p>Iterator that checks-in values in exchange for tickets.</p>
